--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,11 +18,19 @@ linkbar:
         url: /info/what-is-qb/
       - title: "Rules and Gameplay"
         url: /info/rules/
-      - title: "Differences from Knowledge Bowl"
-        url: /info/knowledge-bowl-comparison/
       - title: "Starting a Team"
         url: /info/start-a-team/
+      - title: "Knowledge Bowl Comparison"
+        url: /info/knowledge-bowl-comparison/
       - title: "Pyramidal Questions"
         url: /info/pyramidal
       - title: "Quiz Bowl Resources"
         url: /info/resources/
+  - title: "Tournaments"
+    children:
+      - title: "Upcoming Colorado Tournaments"
+        url: /info/upcoming/
+      - title: "Host a Tournament"
+        url: /info/host-a-tournament/
+      - title: "National Championships"
+        url: /info/nationals/
