--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,7 @@ exclude:
   - package.json
   - Rakefile
   - README
+  - README.md
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
@@ -171,7 +172,7 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
+permalink: /blog/:year-:month-:day/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
@@ -240,6 +241,7 @@ defaults:
       author_profile: false
       sidebar:
         nav: "linkbar"
+
 
 collections:
   info:
