Fixed link to pyramidal page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ linkbar:
       - title: "Knowledge Bowl Comparison"
         url: /info/knowledge-bowl-comparison/
       - title: "Pyramidal Questions"
-        url: /info/pyramidal
+        url: /info/pyramidal/
       - title: "Quiz Bowl Resources"
         url: /info/resources/
   - title: "Tournaments"
