--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ linkbar:
         url: /info/what-is-qb/
       - title: "Rules and Gameplay"
         url: /info/rules/
-      - title: "Starting a Team"
+      - title: "Start a Team"
         url: /info/start-a-team/
       - title: "Knowledge Bowl Comparison"
         url: /info/knowledge-bowl-comparison/
