--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Colorado Quiz Bowl"
 title_separator          : "-"
 name                     : "Matt Mitchell"
 description              : "Information on Quiz Bowl in Colorado"
-url                      : "http://coloradoqb.org"
+url                      : "https://coloradoqb.org"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
