--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,9 @@ linkbar:
         url: /tournaments/hosting/
   - title: "More"
     children:
+      - title: "About / Contact"
+        url: /more/contact/
       - title: "Our Blog"
         url: /blog/allposts/
-      - title: "Contact"
-        url: /more/contact/
+      - title: "CU Boulder team info"
+        url: /cu/
